--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -28,7 +28,7 @@ html {
   background-color: var(--michu-tech-background);
   color: var(--michu-tech-foreground);
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 body {
