--- a/frontend/src/app/components/button/button.component.html
+++ b/frontend/src/app/components/button/button.component.html
@@ -1,7 +1,34 @@
-<button [class.icon-grid]="rightIcon || leftIcon" [style.height]="height" [style.width]="width">
+<ng-container *ngIf="useAnchor else useButton">
+  <a [class.disabled]="disabled"
+     [class.flex-button]="!rightIcon && !leftIcon"
+     [class.icon-grid]="rightIcon || leftIcon"
+     [class.secondary]="design === 'secondary'"
+     [href]="!routerLink ? href : undefined"
+     [routerLink]="routerLink"
+     [style.height]="height"
+     [style.width]="width"
+     [target]="target"
+     class="button">
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+  </a>
+</ng-container>
+
+<ng-template #useButton>
+  <button [class.disabled]="disabled" [class.flex-button]="!rightIcon && !leftIcon"
+          [class.icon-grid]="rightIcon || leftIcon"
+          [class.secondary]="design === 'secondary'"
+          [disabled]="disabled"
+          [style.height]="height"
+          [style.width]="width"
+          class="button">
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+  </button>
+</ng-template>
+
+<ng-template #content>
   <span *ngIf="leftIcon || rightIcon" class="material-symbols-rounded">{{leftIcon}}</span>
-  <ng-container>
-    <ng-content></ng-content>
-  </ng-container>
+  <span>
+      <ng-content></ng-content>
+    </span>
   <span *ngIf="leftIcon || rightIcon" class="material-symbols-rounded">{{rightIcon}}</span>
-</button>
+</ng-template>
