complete login form UI

--- a/frontend/src/app/pages/welcome.page/login.page.component.html
+++ b/frontend/src/app/pages/welcome.page/login.page.component.html
@@ -1,8 +1,8 @@
 <div [style.background-image]="backgroundImageUrl"
      appFullscreenPage
-     class="login-page">
-  <div class="center-card">
-    <div class="card-grid">
+     class="page-root">
+  <div class="login-page">
+    <div class="center-card">
       <div class="welcome">
         <img alt="michu-tech.com" height="120px" src="/assets/michu-tech-icon.svg"
              width="120"/>
