--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -5,10 +5,11 @@
   <app-text-input [password]="true" [value]="form.password" errorText="password required"
                   placeholder="Password"></app-text-input>
   <div></div>
-  <app-button rightIcon="login">
+  <app-button [disabled]="form.group.invalid" rightIcon="login">
     Sign In
   </app-button>
-  <app-button [useAnchor]="true" design="secondary" routerLink="setup">
+  <app-button [useAnchor]="true" design="secondary"
+              routerLink="setup">
     Get started
   </app-button>
 </form>
