--- a/frontend/src/app/pages/welcome.page/login.page.component.scss
+++ b/frontend/src/app/pages/welcome.page/login.page.component.scss
@@ -1,77 +1,79 @@
-.login-page {
+.page-root {
   background-position: center;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+}
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.login-page {
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(8px);
   overflow-y: auto;
 
   .center-card {
-    width: clamp(240px, 70vw, 1200px);
-    backdrop-filter: blur(20px);
-    padding: 20px;
+    width: clamp(240px, 80vw, 1200px);
+    height: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
 
-    .card-grid {
-      display: grid;
-      grid-template-rows: 100%;
-      grid-template-columns: 50% 50%;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 50% 50%;
+    align-content: center;
+    justify-content: center;
 
-      .welcome {
-        display: flex;
-        flex-flow: column;
-        align-items: flex-start;
-        justify-content: center;
-        font-family: "Oswald", sans-serif;
+    .welcome {
+      display: flex;
+      flex-flow: column;
+      align-items: flex-start;
+      justify-content: center;
+      font-family: "Oswald", sans-serif;
 
-        #developedBy {
-          margin: 5px 0 0 0;
-          font-weight: 300;
-          font-size: 14px;
-          text-decoration: none;
-          color: var(--michu-tech-foreground);
-        }
+      #developedBy {
+        margin: 5px 0 0 0;
+        font-weight: 300;
+        font-size: 14px;
+        text-decoration: none;
+        color: var(--michu-tech-foreground);
+      }
 
-        #welcome {
-          margin: 40px 0 0 0;
-          font-size: 56px;
-          font-weight: 200;
-          letter-spacing: 5px;
-          text-transform: uppercase;
-          line-height: 130%;
+      #welcome {
+        margin: 40px 0 0 0;
+        font-size: 56px;
+        font-weight: 200;
+        letter-spacing: 5px;
+        text-transform: uppercase;
+        line-height: 130%;
 
-          span {
-            color: var(--michu-tech-accent);
-            font-size: 72px;
-            font-weight: 700;
-          }
-        }
-
-        #welcomeText {
-          margin: 0;
-          font-weight: 400;
-          font-size: 16px;
-          line-height: 150%;
-          text-align: justify;
-
-          span {
-            padding-left: 36px;
-          }
+        span {
+          color: var(--michu-tech-accent);
+          font-size: 72px;
+          font-weight: 700;
         }
       }
 
-      .login-form-container { // TODO WHY DOES THIS IDIOT LOSE HEIGHT IN DISPLAY FLEX???
-        position: relative;
+      #welcomeText {
+        margin: 0;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        text-align: justify;
 
-        .login-form {
-          height: 100%;
-          display: flex;
-          flex-flow: column;
-          align-items: center;
-          justify-content: center;
+        span {
+          padding-left: 36px;
         }
+      }
+    }
+
+    .login-form-container {
+      position: relative;
+
+      .login-form {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
       }
     }
   }
@@ -80,12 +82,9 @@
 @media (max-width: 1000px) {
   .login-page {
     .center-card {
-
-      .card-grid {
-        display: inline-flex;
-        flex-flow: column;
-        gap: 200px;
-      }
+      height: 180vh;
+      grid-template-rows: repeat(2, clamp(500px, 80vh, 1200px));
+      grid-template-columns: auto;
     }
   }
 }
