--- a/frontend/src/app/pages/welcome.page/login.page.component.html
+++ b/frontend/src/app/pages/welcome.page/login.page.component.html
@@ -10,9 +10,7 @@
           michu-tech.com</a>
         <h1 id="welcome"><span>W</span>elcome</h1>
         <p id="welcomeText"><span>to</span> Swiss Budget! A WebApp that lets you manage your
-          money in a
-          breeze with a
-          focus on your privacy. It features automatic transaction import via E-Mail!</p>
+          money in a breeze. It features automatic transaction import via E-Mail!</p>
       </div>
 
       <div class="login-form-container">
