--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -43,3 +43,11 @@ body {
   left: 0;
   box-sizing: border-box;
 }
+
+.steps-panel-step {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
