work on setup forms (UI)

--- a/frontend/src/app/components/button/button.component.html
+++ b/frontend/src/app/components/button/button.component.html
@@ -21,7 +21,8 @@
           [disabled]="disabled"
           [style.height]="height"
           [style.width]="width"
-          class="button">
+          class="button"
+          type="button">
     <ng-container *ngTemplateOutlet="content"></ng-container>
   </button>
 </ng-template>
