--- a/frontend/src/app/pages/welcome.page/setup.subpage/setup.subpage.component.html
+++ b/frontend/src/app/pages/welcome.page/setup.subpage/setup.subpage.component.html
@@ -1,13 +1,28 @@
 <div class="setup-subpage">
-  <h3 style="margin: 0 0 5px 0;">Get Started</h3>
+  <h2 style="margin: 0 0 5px 0;">Get Started</h2>
   <p style="margin: 0 0 16px 0;">Follow the next few steps to get started with your Swiss Budget.
     The setup takes about 6 minutes.</p>
   <div style="height: 500px;">
-    <app-steps-panel (firstPreviousClicked)="navigateToLogin()" (lastNextClicked)="complete()"
-                     [firstPreviousClickable]="true" [lastNextClickable]="true"
-                     lastNextLabel="Done">
-      <div *appPanelStep class="steps-panel-step">
-        <span>one</span>
+    <app-steps-panel [cursor]="cursor" [showNavigation]="false">
+      <div *appPanelStep class="steps-panel-step setup-step-container">
+        <h3>E-Mail Account</h3>
+        <p>Enter your mail address and password. We need these credentials to import your
+          transaction notifications.</p>
+        <p>This will automatically also be the login to this application.</p>
+        <form [formGroup]="form.group" class="controls">
+          <app-text-input (submit)="checkMailCredentials()" [value]="form.mail"
+                          errorText="not valid mail address"
+                          height="60px"></app-text-input>
+          <app-text-input (submit)="checkMailCredentials()" [password]="true"
+                          [value]="form.password"
+                          errorText="password required"
+                          height="60px"></app-text-input>
+          <p *ngIf="errorMessage" class="form-error-message">{{errorMessage}}</p>
+          <app-button (onClick)="checkMailCredentials()"
+                      height="60px"
+                      rightIcon="chevron_right">Next
+          </app-button>
+        </form>
       </div>
       <div *appPanelStep class="steps-panel-step">
         <span>two</span>
@@ -16,5 +31,10 @@
         <span>three</span>
       </div>
     </app-steps-panel>
+    <div style="align-self: flex-start;">
+      <app-button [useAnchor]="true" height="60px" routerLink="login" width="125px">
+        Cancel
+      </app-button>
+    </div>
   </div>
 </div>
