--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -51,3 +51,23 @@ body {
   bottom: 0;
   left: 0;
 }
+
+.form-error-message {
+  color: var(--michu-tech-warn);
+  font-size: 14px;
+  font-weight: 600;
+  animation: flyIn ease-out 250ms forwards;
+}
+
+@keyframes flyIn {
+  0% {
+    transform: translateY(-12px);
+    opacity: 0;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
