--- a/frontend/src/app/components/dialog/dialog.component.scss
+++ b/frontend/src/app/components/dialog/dialog.component.scss
@@ -16,7 +16,7 @@
 
   .dialog {
     display: block;
-    padding: 12px;
+    padding: 24px;
     margin: 10px;
     box-sizing: border-box;
     background-color: var(--michu-tech-background);
@@ -28,6 +28,30 @@
     animation-fill-mode: forwards;
     animation-direction: normal;
     animation-iteration-count: 1;
+
+    position: relative;
+
+    .close {
+      all: unset;
+      cursor: pointer;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      box-sizing: border-box;
+
+      transition: all 150ms ease-out;
+
+      color: var(--michu-tech-foreground);
+    }
+
+    .close:hover {
+      opacity: 0.6;
+    }
   }
 }
 
