WIP - complete HELP dialog - send mails from backend - add nullable validator (default nothing is nullable) - fix bugs

--- a/frontend/src/app/components/help/help.component.html
+++ b/frontend/src/app/components/help/help.component.html
@@ -28,7 +28,8 @@
 
     <app-button (onClick)="sendRequest()" [disabled]="form.group.invalid" [loading]="loading"
                 height="60px"
+                rightIcon="send"
                 style="align-self: flex-end" width="125px">
-        Save
+        Send
     </app-button>
 </div>
