--- a/frontend/src/app/pages/welcome.page/setup.subpage/setup.subpage.component.html
+++ b/frontend/src/app/pages/welcome.page/setup.subpage/setup.subpage.component.html
@@ -1,114 +1,175 @@
 <div class="setup-subpage">
-  <h2 style="margin: 0 0 5px 0;">Get Started</h2>
-  <p style="margin: 0 0 16px 0;">Welcome to SwissBudget!</p>
-  <div style="height: 500px;">
-    <app-steps-panel [cursor]="cursor" [showNavigation]="false">
-      <div *appPanelStep="true" class="steps-panel-step setup-step-container">
-        <h3>What you have to do...</h3>
-        <p>
-          In the next few steps, I am going to guide you through a short setup
-          process.<br><br>
-          A key feature of SwissBudget is the automatic import of your money transactions.
-          Since the swiss banks don't have a public server for developers to access their
-          data (understandably...), I had to come up with an other solution for automatic
-          transaction import. <br>
-          My solution is the E-Mail notification of your E-Banking. In most E-Banking
-          platforms you can request a notification every time anything in your balance
-          changes. So this app loads those notifications.<br><br>
-          This is why you will have to enter your E-Mail address and password. (So that we
-          can import those notifications.)
-        </p>
-        <h3>Setup process</h3>
-        <ol style="margin: 0 0 5px 0;">
-          <li>Enter E-Mail credentials</li>
-          <li>Enter bank name</li>
-          <li>Configure E-Mail notifications in E-Banking</li>
-          <li>(optional) Move transaction mails to folder (rule)</li>
-          <li>Done 🎉</li>
-        </ol>
+    <h2 style="margin: 0 0 5px 0;">Get Started</h2>
+    <p style="margin: 0 0 16px 0;">Welcome to SwissBudget!</p>
+    <div style="height: 500px;">
+        <app-steps-panel [cursor]="cursor" [showNavigation]="false">
+            <div *appPanelStep="true" class="steps-panel-step setup-step-container">
+                <h3>What you have to do...</h3>
+                <p>
+                    In the next few steps, I am going to guide you through a short setup
+                    process.<br><br>
+                    A key feature of SwissBudget is the automatic import of your money transactions.
+                    Since the swiss banks don't have a public server for developers to access their
+                    data (understandably...), I had to come up with an other solution for automatic
+                    transaction import. <br>
+                    My solution is the E-Mail notification of your E-Banking. In most E-Banking
+                    platforms you can request a notification every time anything in your balance
+                    changes. So this app loads those notifications.<br><br>
+                    This is why you will have to enter your E-Mail address and password. (So that we
+                    can import those notifications.)
+                </p>
+                <h3>Setup process</h3>
+                <ol style="margin: 0 0 5px 0;">
+                    <li>Enter E-Mail credentials</li>
+                    <li>Enter bank name</li>
+                    <li>Configure E-Mail notifications in E-Banking</li>
+                    <li>(optional) Move transaction mails to folder (rule)</li>
+                    <li>Done 🎉</li>
+                </ol>
 
-        <app-button (onClick)="cursor = cursor + 1" height="60px" rightIcon="chevron_right"
-                    style="margin-top: 10px;">
-          Start
-        </app-button>
-      </div>
+                <app-button (onClick)="cursor = cursor + 1" height="60px" rightIcon="chevron_right"
+                            style="margin-top: 10px;">
+                    Start
+                </app-button>
+            </div>
 
-      <div *appPanelStep class="steps-panel-step setup-step-container">
-        <h3>E-Mail Account</h3>
-        <p>Enter your mail address and password. We need these credentials to import your
-          transaction notifications.</p>
-        <p>This will automatically also be the login to this application.</p>
-        <form [formGroup]="form.group" class="controls">
-          <app-text-input (submit)="checkMailCredentials()" [value]="form.mail"
-                          errorText="not valid mail address"
-                          height="60px"
-                          placeholder="E-Mail"></app-text-input>
-          <app-text-input (submit)="checkMailCredentials()" [password]="true"
-                          [value]="form.password"
-                          errorText="password required"
-                          height="60px"
-                          placeholder="Password"></app-text-input>
-          <p *ngIf="errorMessage" class="form-error-message"
-             style="margin-top: 10px;">{{errorMessage}}</p>
-          <app-button (onClick)="checkMailCredentials()"
-                      [disabled]="isMailAndPasswordInvalid()"
-                      [loading]="loadingMailTest"
-                      height="60px"
-                      rightIcon="chevron_right">
-            Next
-          </app-button>
-          <p *ngIf="showGoogleMessage" style="margin-top: 10px;">
-            <strong>NOTE</strong>: Google requires some additional configuration. <br>
-            See
-            <a
-              href="https://support.google.com/mail/answer/7126229?hl=en#zippy=%2Cstep-check-that-imap-is-turned-on"
-              target="_blank">
-              here
-            </a>
-            how you have to setup your gmail. (only step 1 is required)<br>
-            And create a custom application password
-            <a href="https://myaccount.google.com/apppasswords"
-               target="_blank">
-              here
-            </a>
-            . Use this <strong>password</strong> for the login to
-            <strong>SwissBudget</strong>.
-            Explanation can be found
-            <a href="https://support.google.com/accounts/answer/185833?hl=en"
-               target="_blank">
-              (here)
-            </a>.
-          </p>
-        </form>
-      </div>
-      <div *appPanelStep class="steps-panel-step">
-        <h3>Select your Bank</h3>
-        <p>I need this information because depending on the bank your notification E-Mail will be
-          different. So the app needs to know what to expect. <br>If your Bank is not listed in the
-          selector, click help and tell me about it. I'll do my best to add it. </p>
-        <app-select [options]="supportedBanks" [value]="form.bank"
-                    errorMessage="Not a supported bank"
-                    placeholder="Bank"></app-select>
-        <app-button (onClick)="cursor = cursor + 1"
-                    [disabled]="form.bank.invalid" height="60px"
-                    rightIcon="chevron_right"
-                    style="margin-top: 10px; display: block;">
-          Next
-        </app-button>
-      </div>
-      <div *appPanelStep class="steps-panel-step">
-        <span>TODO show tutorial for email notifications</span>
-      </div>
-      <div *appPanelStep class="steps-panel-step">
-        <span>TODO optionally show tutorial for how to enable automatic transaction mail move</span>
-      </div>
-    </app-steps-panel>
-    <div
-      style="align-self: flex-start; margin-top: 10px; display: flex; flex-flow: row nowrap; justify-content: space-between;">
-      <app-button [useAnchor]="true" height="60px" routerLink="login" width="125px">
-        Cancel
-      </app-button>
-      <app-help></app-help>
+            <div *appPanelStep class="steps-panel-step setup-step-container">
+                <h3>E-Mail Account</h3>
+                <p>Enter your mail address and password. We need these credentials to import your
+                    transaction notifications.</p>
+                <p>This will automatically also be the login to this application. If you change your
+                    password in the mail account it will NOT be changed here.</p>
+                <form [formGroup]="form.group" class="controls">
+                    <app-text-input (submit)="checkMailCredentials()" [value]="form.mail"
+                                    errorText="not valid mail address"
+                                    height="60px"
+                                    placeholder="E-Mail"></app-text-input>
+                    <app-text-input (submit)="checkMailCredentials()" [password]="true"
+                                    [value]="form.password"
+                                    errorText="password required"
+                                    height="60px"
+                                    placeholder="Password"></app-text-input>
+                    <p *ngIf="errorMessage" class="form-error-message"
+                       style="margin-top: 10px;">{{errorMessage}}</p>
+                    <app-button (onClick)="checkMailCredentials()"
+                                [disabled]="isMailAndPasswordInvalid()"
+                                [loading]="loadingMailTest"
+                                height="60px"
+                                rightIcon="chevron_right">
+                        Next
+                    </app-button>
+                    <p *ngIf="showGoogleMessage" style="margin-top: 10px;">
+                        <strong>NOTE</strong>: Google requires some additional configuration. <br>
+                        See
+                        <a
+                            href="https://support.google.com/mail/answer/7126229?hl=en#zippy=%2Cstep-check-that-imap-is-turned-on"
+                            target="_blank">
+                            here
+                        </a>
+                        how you have to setup your gmail. (only step 1 is required)<br>
+                        And create a custom application password
+                        <a href="https://myaccount.google.com/apppasswords"
+                           target="_blank">
+                            here
+                        </a>
+                        . Use this <strong>password</strong> for the login to
+                        <strong>SwissBudget</strong>.
+                        Explanation can be found
+                        <a href="https://support.google.com/accounts/answer/185833?hl=en"
+                           target="_blank">
+                            (here)
+                        </a>.
+                    </p>
+                </form>
+            </div>
+            <div *appPanelStep class="steps-panel-step">
+                <h3>Select your Bank</h3>
+                <p>I need this information because depending on the bank your notification E-Mail
+                    will be
+                    different. So the app needs to know what to expect. <br>If your Bank is not
+                    listed in the
+                    selector, click help and tell me about it. I'll do my best to add it. </p>
+                <app-select [options]="supportedBanks" [value]="form.bank"
+                            errorMessage="Not a supported bank"
+                            placeholder="Bank"></app-select>
+                <app-button (onClick)="cursor = cursor + 1"
+                            [disabled]="form.bank.invalid" height="60px"
+                            rightIcon="chevron_right"
+                            style="margin-top: 10px; display: block;">
+                    Next
+                </app-button>
+            </div>
+            <div *appPanelStep class="steps-panel-step">
+                <h3>Setup E-Mail notifications</h3>
+                <p *ngIf="form.bank.value === 'Raiffeisen'">
+                    Head on over to <a
+                    href="https://www.raiffeisen.ch/region-zofingen/de/privatkunden/e-banking/e-banking-nutzen-und-vorteile/push-benachrichtigungen.html"
+                    target="_blank">here</a> for a tutorial on how to setup notifications in the
+                    raiffeisen e-banking. Make sure to enable <strong>E-Mail</strong> notifications
+                    for <strong>all changes</strong> on your account.
+                </p>
+                <p>If you don't do this step, automatic transaction import wont work and you'll have
+                    to enter all the values by hand. ):</p>
+                <app-button (onClick)="cursor = cursor + 1"
+                            [disabled]="form.bank.invalid" height="60px"
+                            rightIcon="chevron_right"
+                            style="margin-top: 10px; display: block;">
+                    Done?
+                </app-button>
+            </div>
+            <div *appPanelStep class="steps-panel-step">
+                <h3>Inbox for transactions?</h3>
+                <p>I recommend you to create a folder in you mail account for all transaction
+                    notifications. This will help to keep your inbox clean. Also you should create a
+                    rule that moves all transaction notifications to this folder. </p>
+                <app-text-input [value]="form.folderName"
+                                errorText="Has to be between 3 and 32 characters"
+                                height="60px"
+                                placeholder="Folder">
+                </app-text-input>
+                <p>Should I create the folder for you? (rule won't be created)</p>
+
+                <p *ngIf="createFolderErrorMessage"
+                   class="form-error-message">{{createFolderErrorMessage}}</p>
+
+                <div class="folder-controls">
+                    <app-button (onClick)="createCustomInbox()"
+                                *ngIf="!folderCreated else folderCreatedTpl"
+                                [disabled]="!form.folderName.value || form.folderName.invalid"
+                                class="wide-control"
+                                rightIcon="folder">Create
+                        folder
+                    </app-button>
+                    <ng-template #folderCreatedTpl>
+                        <p class="wide-control">Folder {{form.folderName.value}} created!</p>
+                    </ng-template>
+                    <app-button (onClick)="continueAfterCreateFolder(true)"
+                                [disabled]="form.group.invalid || folderCreated"
+                                design="secondary" rightIcon="chevron_right">no folder
+                    </app-button>
+                    <app-button (onClick)="continueAfterCreateFolder(false)"
+                                [disabled]="form.group.invalid"
+                                rightIcon="chevron_right">Continue
+                    </app-button>
+                </div>
+            </div>
+            <div *appPanelStep class="steps-panel-step">
+                <h3>Setup completed</h3>
+                <p>Congratulations your setup is completed! You can start using Swiss Budget.
+                    Remember, if you have any issues, feel free to contact me via the help
+                    button.</p>
+                <app-button (onClick)="completeSetup()" [disabled]="form.group.invalid"
+                            height="60px"
+                            rightIcon="check">Start
+                </app-button>
+            </div>
+        </app-steps-panel>
+        <div
+            style="align-self: flex-start; margin-top: 10px; display: flex; flex-flow: row nowrap; justify-content: space-between;">
+            <app-button [useAnchor]="true" height="60px" routerLink="login" width="125px">
+                Cancel
+            </app-button>
+            <app-help></app-help>
+        </div>
     </div>
-  </div>
 </div>
