--- a/frontend/src/app/pages/welcome.page/setup.subpage/setup.subpage.component.scss
+++ b/frontend/src/app/pages/welcome.page/setup.subpage/setup.subpage.component.scss
@@ -30,4 +30,17 @@
       margin-top: 20px;
     }
   }
+
+  .folder-controls {
+    display: grid;
+    grid-template-columns: repeat(2, calc(50% - 5px));
+    grid-auto-rows: 60px;
+    gap: 10px;
+
+    .wide-control {
+      grid-column: 1/3;
+      display: block;
+      height: 100%;
+    }
+  }
 }
